Gemini Phase I Schema Changes

# Version 2020.1.1 - 2020A
##########################

# Version 2019.2.1 - 2019B
##########################

* Added new instrument, Zorro, with two modes, namely Speckle (0.0096"/pix, 6.7" FoV) and Wide Field (0.0725"/pix, 60" FoV). (REL-3454)
* Added new filter, ri, for GMOS-N. (REL-3621)

# Version 2019.1.1 - 2019A
##########################

# Version 2018.2.2 - 2018B
##########################

# Version 2018.2.1 - 2018B
##########################

* Added OVI and OVIC filters for GMOS-N and GMOS-S. (REL-3273)
* Added new instrument, 'Alopeke, with two modes, namely Speckle (0.0096"/pix, 6.7" FoV) and Wide Field (0.0725"/pix, 60" FoV). (REL-3351)

# Version 2018.1.1 - 2018A
##########################

* Hidden filter Y and J-lo for Flamingos2
* Added Subaru Intensive Program proposal class
* Renamed CFHT references to CFH

# Version 2017.2.1 - 2017B
##########################

* Formerly, the time field in Observation referred to program time.
  As per REL-2926, we are now dividing time into multiple categories to include calculated calibration overheads.
  This has resulted in a number of new fields in Observation, namely progTime, partTime, and time, where
  partTime is a function of progTime as per the new Overheads class, and time is the sum of these
  and represents total time.
* Texes is not available this semester.
* Two new filters available for F2: 'K-blue (2.06 um)' and 'K-red (2.31 um)'.
* Altair LGS is disabled for this semester due to the GN laser not working.

# Version 2017.1.1 - 2017A
##########################

* Added an overrideAffiliate flag to Meta to allow discrepancy between PI institution affiliate and chosen affiliate.
  Set to default "true", as if PI institution affiliate and chosen affiliate are the same, it resets to false.

# Version 2016.2.2 - 2016B
##########################

* FT proposals can have as PI Affiliation an NGO partner or an Exchange Partner

# Version 2016.2.1 - 2016B