@@ -2,6 +2,8 @@ Gemini Phase I Schema Changes
 
 # Version 2020.1.1 - 2020A
 ##########################
+* Added "Multi-messenger astrophysics" keyword
+* Hide "Suprime Cam" for subaru
 
 # Version 2019.2.1 - 2019B
 ##########################
